# opencv_learn

./: CMakeLists.txt
opencvBasis/: CMakeLists.txt
opencvBasis/src/: A4Adjust.cpp  onlyfindcontours.cpp
serialBasis/: CMakeLists.txt  main.cpp
serialBasis/include/: Uart.hpp
serialBasis/src/: Uart.cpp
src/: MatOpencv.cpp  camera.cpp  onlyfindcontours.cpp
